# Project-Odin

./: .gitattributes  .gitignore  CLAUDE.md  CLAUDE_MYTHOS.md  Cargo.toml  LICENSE  PLATFORM_DESIGN.md  README.md  chess4pc.py  engine_game_analysis_prompt.md  engine_multi_perspective_instructions.md  stage_10_mcts_prompt.md
odin-engine/: Cargo.toml
odin-engine/benches/: engine_bench.rs
odin-engine/src/: datagen.rs  lib.rs  main.rs  util.rs
odin-engine/src/board/: board_struct.rs  fen4.rs  mod.rs  square.rs  types.rs  zobrist.rs
odin-engine/src/eval/: development.rs  dkw.rs  ffa_strategy.rs  king_safety.rs  material.rs  mod.rs  multi_player.rs  pawn_structure.rs  pst.rs  terrain.rs  values.rs
odin-engine/src/gamestate/: mod.rs  rules.rs  scoring.rs
odin-engine/src/huginn/: buffer.rs  mod.rs
odin-engine/src/movegen/: attacks.rs  generate.rs  mod.rs  moves.rs  tables.rs
odin-engine/src/protocol/: emitter.rs  mod.rs  parser.rs  types.rs
odin-engine/src/search/: board_scanner.rs  brs.rs  hybrid.rs  mcts.rs  mod.rs  swarm_eval.rs  time_manager.rs  tt.rs
odin-engine/src/variants/: chess960.rs  mod.rs
odin-engine/tests/: stage_00_proof_of_life.rs  stage_01_board.rs  stage_02_movegen.rs  stage_03_gamestate.rs  stage_04_protocol.rs  stage_06_eval.rs  stage_07_brs.rs  stage_08_brs_hybrid.rs  stage_09_tt_ordering.rs  stage_10_mcts.rs  stage_11_hybrid.rs  stage_12_regression.rs  stage_13_time_mgmt.rs  stage_14_nnue.rs  stage_15_datagen.rs  stage_16_nnue_integration.rs  stage_17_variant_tuning.rs  stage_19_fuzz.rs
odin-ui/src-tauri/: Cargo.toml  tauri.conf.json
(+276 files in other folders)
