[package]
name = "odin-engine"
version = "0.1.0"
edition = "2021"
description = "Project Odin: A four-player chess engine"

[dependencies]
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arrayvec = "0.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "engine_bench"
harness = false

