[package]
name = "odin-ui"
version = "0.5.0"
edition = "2021"
description = "Project Odin — Basic UI Shell"

[lib]
name = "odin_ui_lib"
crate-type = ["lib", "staticlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
